Added Session 2 Complete Code

--- a/session2/index.html
+++ b/session2/index.html
@@ -6,10 +6,40 @@
     <title>SESSION 2 : BASIC HTML ELEMENTS</title>
 </head>
 <body>
- 
+
     <!-- HTML TEXT TAGS -->
-     <H1>This is a sample heading</H1>
-     <H3>This is a sample heading</H3>
-     
+    <H1>This is a sample heading.</H1>
+    <h2>This is a sample heading.</h2>
+    <h3>This is a sample heading.</h3>
+    <h6>This is a sample headling.</h6>
+    <p><strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. 
+        Amet est quaerat at necessitatibus, sint nam deleniti odio ea quod accusamus mollitia modi! 
+        <em>Quod corporis hic quis <br><br>autem quia sunt ut!</em></p>
+
+        <hr> 
+        <!-- ORDERED AND UNORDERED LIST -->
+        <h3>UNORDERED LIST</h3>
+        <h3>Programs Offered at the University of the Assumption:</h3>
+        <ul>
+            <li>Computer Engineering</li>
+            <li>Information Technology</li>
+                <!-- Nested Unordered List -->
+                <ul>
+                    <li>Major in Web Dev</li>
+                    <li>Major in Data Analytics</li>
+                </ul>
+            <li>Nursing</li>
+            <li>Architecture</li>
+        </ul>
+
+        <h3>ORDERED LIST</h3>
+        <ol type="I" reversed>
+            <li>Hello, Assumptionists!</li>
+            <li>Hello, Assumptionists!</li>
+            <li>Hello, Assumptionists!</li>
+        </ol>
+
+        <img src="https://alchetron.com/cdn/university-of-the-assumption-498bc997-b675-44f1-aee5-0dcc434b84b-resize-750.jpeg" alt="">
+
 </body>
 </html>
