--- a/session 3/part1.html
+++ b/session 3/part1.html
@@ -15,16 +15,16 @@
 
 
     <!-- Hyperlinks -->
-     <!-- 1. Relative Link - These are links located located in the local folder. -->
+    <!-- 1. Relative Link - These are links located located in the local folder. -->
     
     <div align="right">
-        <a href="#bellow">scroll down</a>
+        <a href="#bellow">Scroll Down</a>
     </div>
 
 
 
 
-     <div align="center" id="top">
+    <div align="center" id="top">
         <h1>Relative Links</h1>
         <a href="./sample1.html">Go to sample 1</a>
         <br>
